# aoc2017

./: .gitignore  CMakeLists.txt  README.md
inverse-captcha/: CMakeLists.txt
inverse-captcha/include/: CaptchaSolver.h  FileReader.h
inverse-captcha/src/: CaptchaSolver.cpp  FileReader.cpp
inverse-captcha/tests/: CMakeLists.txt  CaptchaSolver.tst.cpp  FileReader.tst.cpp
src/: main.cpp
tests/: CMakeLists.txt  main.tst.cpp
